React and Server Merged

--- a/package.json
+++ b/package.json
@@ -6,11 +6,18 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "jquery": "^3.6.3",
     "jsdom": "^21.0.0",
     "mongoose": "^6.8.3",
     "morgan": "^1.10.0",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "bootstrap": "^4.6.2",
+    "jquery": "^3.6.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.7.0",
+    "react-scripts": "5.0.1",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
@@ -19,8 +26,9 @@
   "version": "1.0.0",
   "main": "srver.js",
   "scripts": {
-    "start": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "dev": "nodemon servers.js"
   },
   "author": "",
   "license": "ISC",
