--- a/package.json
+++ b/package.json
@@ -1,48 +1,35 @@
 {
+  "name": "hh",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "start": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "dev": "nodemon derver.js"
+  },
   "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "axios": "^1.2.2",
     "body-parser": "^1.20.1",
+    "bootstrap": "^4.6.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "jquery": "^3.6.3",
     "jsdom": "^21.0.0",
     "mongoose": "^6.8.3",
     "morgan": "^1.10.0",
-    "mysql": "^2.18.1",
-    "bootstrap": "^4.6.2",
-    "jquery": "^3.6.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.7.0",
-    "react-scripts": "5.0.1",
-    "semantic-ui-css": "^2.5.0",
-    "semantic-ui-react": "^2.1.4"
+    "react-router-dom": "^6.8.1"
   },
   "devDependencies": {
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
+    "@vitejs/plugin-react": "^3.1.0",
+    "vite": "^4.1.0",
     "nodemon": "^2.0.20"
-  },
-  "name": "crud",
-  "version": "1.0.0",
-  "main": "srver.js",
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "dev": "nodemon server.js"
-  },
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
   }
 }
