--- a/package.json
+++ b/package.json
@@ -1,8 +1,6 @@
 {
-  "name": "hh",
-  "private": true,
+  "name": "crud-app",
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "start": "vite",
     "build": "vite build",
