--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "start": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "dev": "nodemon derver.js"
+    "server": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "react": "^18.2.0",
