--- a/package.json
+++ b/package.json
@@ -9,12 +9,11 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "axios": "^1.2.2",
     "body-parser": "^1.20.1",
-    "bootstrap": "^4.6.2",
+    "bootstrap": "^5.2.3",
     "cors": "^2.8.5",
+    "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
@@ -22,13 +21,17 @@
     "jsdom": "^21.0.0",
     "mongoose": "^6.8.3",
     "morgan": "^1.10.0",
+    "react": "^18.2.0",
+    "react-big-calendar": "^1.6.8",
+    "react-datepicker": "^4.10.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
-    "vite": "^4.1.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "vite": "^4.1.0"
   }
 }
