--- a/config.env
+++ b/config.env
@@ -1,2 +1,4 @@
+NODE_ENV="Development"
+# DB=mongodb+srv://admin:1234@cluster0.odjly9t.mongodb.net/?retryWrites=true&w=majority
+DB=mongodb://localhost:27017/EducationPlatform
 PORT=5000
-MONGO_URL=mongodb+srv://admin:1234@cluster0.odjly9t.mongodb.net/?retryWrites=true&w=majority
