--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "server": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "both": "concurrently \"npm run start\" \"npm run server\""
   },
   "dependencies": {
     "axios": "^1.2.2",
@@ -17,15 +18,19 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "gridfs-stream": "^1.1.1",
     "jquery": "^3.6.3",
     "jsdom": "^21.0.0",
-    "mongoose": "^6.8.3",
+    "mongoose": "^5.12.9",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
+    "multer-gridfs-storage": "^4.2.0",
     "react": "^18.2.0",
     "react-big-calendar": "^1.6.8",
     "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.1"
+    "react-router-dom": "^6.8.1",
+    "uninstall": "^0.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
