--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.2.2",
     "body-parser": "^1.20.1",
     "bootstrap": "^5.2.3",
+    "cloc": "^2.11.0",
     "cors": "^2.8.5",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
@@ -21,7 +22,7 @@
     "gridfs-stream": "^1.1.1",
     "jquery": "^3.6.3",
     "jsdom": "^21.0.0",
-    "mongoose": "^5.12.9",
+    "mongoose": "^7.0.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^4.2.0",
@@ -29,8 +30,7 @@
     "react-big-calendar": "^1.6.8",
     "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.1",
-    "uninstall": "^0.0.0"
+    "react-router-dom": "^6.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
