--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.11",
+    "@mui/material": "^5.11.11",
     "axios": "^1.2.2",
     "body-parser": "^1.20.1",
     "bootstrap": "^5.2.3",
@@ -23,9 +27,12 @@
     "morgan": "^1.10.0",
     "react": "^18.2.0",
     "react-big-calendar": "^1.6.8",
+    "react-bootstrap-sidebar-menu": "^2.0.3",
     "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.1"
+    "react-router-dom": "^6.8.1",
+    "recharts": "^2.4.3",
+    "sass": "^1.58.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
