some axios and back end fixes

--- a/config.env
+++ b/config.env
@@ -1,4 +1,4 @@
 NODE_ENV="Development"
 # DB=mongodb+srv://admin:1234@cluster0.odjly9t.mongodb.net/?retryWrites=true&w=majority
-DB=mongodb://localhost:27017/EducationPlatform
+DB=mongodb://127.0.0.1:27017/EducationPlatform
 PORT=5000
