--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.2.2",
     "body-parser": "^1.20.1",
     "bootstrap": "^5.2.3",
+    "chart.js": "^4.2.1",
     "cloc": "^2.11.0",
     "cors": "^2.8.5",
     "date-fns": "^2.29.3",
