--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "gridfs-stream": "^1.1.1",
     "jquery": "^3.6.3",
     "jsdom": "^21.0.0",
+    "mailgen": "^2.0.27",
     "mongoose": "^7.0.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^4.2.0",
+    "nodemailer": "^6.9.1",
     "react": "^18.2.0",
     "react-big-calendar": "^1.6.8",
     "react-bootstrap-sidebar-menu": "^2.0.3",
