--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^4.2.0",
     "nodemailer": "^6.9.1",
+    "qrcode-terminal": "^0.12.0",
     "react": "^18.2.0",
     "react-big-calendar": "^1.6.8",
     "react-bootstrap-sidebar-menu": "^2.0.3",
@@ -40,7 +41,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
     "recharts": "^2.4.3",
-    "sass": "^1.58.3"
+    "sass": "^1.58.3",
+    "whatsapp-web.js": "^1.19.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
