--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.11",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "antd": "^5.3.3",
     "axios": "^1.2.2",
     "body-parser": "^1.20.1",
     "bootstrap": "^5.2.3",
@@ -33,12 +35,14 @@
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^4.2.0",
     "nodemailer": "^6.9.1",
+    "pdfjs-dist": "^3.4.120",
     "qrcode-terminal": "^0.12.0",
     "react": "^18.2.0",
     "react-big-calendar": "^1.6.8",
     "react-bootstrap-sidebar-menu": "^2.0.3",
     "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
+    "react-pdf": "^6.2.2",
     "react-router-dom": "^6.8.1",
     "recharts": "^2.4.3",
     "sass": "^1.58.3",
