--- a/config.env
+++ b/config.env
@@ -1,4 +1,9 @@
+# Database
 NODE_ENV="Development"
 # DB=mongodb+srv://admin:1234@cluster0.odjly9t.mongodb.net/?retryWrites=true&w=majority
 DB=mongodb://127.0.0.1:27017/EducationPlatform
+# server port
 PORT=5000
+# Email
+EMAIL = uofktestemail@gmail.com
+PASS = mhgfezevgneagwhq
