--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.2.2",
     "body-parser": "^1.20.1",
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.3",
     "chart.js": "^4.2.1",
     "cloc": "^2.11.0",
     "cors": "^2.8.5",
@@ -42,6 +43,7 @@
     "react-bootstrap-sidebar-menu": "^2.0.3",
     "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
+    "react-html5video": "^2.5.1",
     "react-pdf": "^6.2.2",
     "react-router-dom": "^6.8.1",
     "recharts": "^2.4.3",
