--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.11.11",
     "@react-pdf-viewer/core": "^3.12.0",
     "antd": "^5.3.3",
+    "apexcharts": "^3.37.3",
     "axios": "^1.2.2",
     "body-parser": "^1.20.1",
     "bootstrap": "^5.2.3",
@@ -43,10 +44,9 @@
     "react-bootstrap-sidebar-menu": "^2.0.3",
     "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
-    "react-html5video": "^2.5.1",
     "react-pdf": "^6.2.2",
     "react-router-dom": "^6.8.1",
-    "recharts": "^2.4.3",
+    "react-toastify": "^9.1.2",
     "sass": "^1.58.3",
     "whatsapp-web.js": "^1.19.5"
   },
@@ -55,6 +55,7 @@
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
     "nodemon": "^2.0.20",
+    "tailwindcss": "^3.3.1",
     "vite": "^4.1.0"
   }
 }
